--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:dev]
+[env:board]
 platform = espressif8266
 board = esp12e
 framework = arduino
@@ -20,7 +20,7 @@ lib_deps =
      Adafruit Unified Sensor@1.0.3
      DebouncedInput@1.0.13
  
-[env:native]
+[env:local]
 platform = native
 test_build_project_src = true
 build_flags =
