--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,7 @@ install:
 - platformio update
 script:
 - platformio run
+- rm ./.pioenvs
+- rm ./.piolibdeps
 - platformio run -e local
 - "./.pioenvs/local/program"
