--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,4 @@ install:
 - pip install -U platformio
 - platformio update
 script:
-- platformio run
-- rm ./.pioenvs
-- rm ./.piolibdeps
-- platformio run -e local
-- "./.pioenvs/local/program"
+- platformio test -e local
